--- a/ai_perceptron_fr.ipynb
+++ b/ai_perceptron_fr.ipynb
@@ -21,8 +21,8 @@
     "- Ajouter notations et explications\n",
     "- Tester l'autre version de la règle de mise à jours de $w$: if err then ...\n",
     "- **[ok]** Décrire et illustrer les deux fonctions de transfert: signe et heaviside\n",
-    "- Plot de l'evolution de la courbe de niveau ($x_1 w_1 + x_2 w_2 + ... = 0$) dans l'espace des entrées: illustration avec 2 entrées seulement ou faire un graph de projection (co. Tino)\n",
-    "- Plot de l'evolution de $w$ dans l'espace des $w$ illustration avec 2 entrées seulement ou faire un graph de projection (co. Tino)\n",
+    "- Plot de l'evolution de la courbe de niveau ($x_1 w_1 + x_2 w_2 + ... = 0$) dans l'espace des entrées: illustration avec 2 entrées seulement ou faire un graph de projection de type *scatter plot matrix*\n",
+    "- Plot de l'evolution de $w$ dans l'espace des $w$ illustration avec 2 entrées seulement ou faire un graph de projection de type *scatter plot matrix*\n",
     "- Ajouter \"Les limites du Perceptron\""
    ]
   },
