--- a/ai_multilayer_perceptron_fr.ipynb
+++ b/ai_multilayer_perceptron_fr.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PMC"
+    "# Perceptron Multicouche"
    ]
   },
   {
@@ -33,55 +33,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\n",
-    "\\newcommand{\\activthres}{\\theta}\n",
-    "\\newcommand{\\activfunc}{f}\n",
-    "\\newcommand{\\errfunc}{E}\n",
-    "\\newcommand{\\pot}{p}\n",
-    "\\newcommand{\\learnrate}{\\epsilon}\n",
-    "\\newcommand{\\learnit}{n}\n",
-    "\\newcommand{\\it}{t}\n",
-    "\\newcommand{\\sigin}{x}\n",
-    "\\newcommand{\\sigincur}{x_i}\n",
-    "\\newcommand{\\sigout}{y}\n",
-    "\\newcommand{\\sigoutcur}{y_i}\n",
-    "\\newcommand{\\sigoutprev}{y_j}\n",
-    "\\newcommand{\\sigoutdes}{d_i}\n",
-    "\\newcommand{\\wij}{w_{ij}}\n",
-    "\\newcommand{\\weights}{\\boldsymbol{W}}\n",
-    "\\newcommand{\\weight}{w}\n",
-    "\\newcommand{\\errsig}{\\Delta}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Le PMC peut approximer n'importe quelle fonction **continue** avec une pr\u00e9cision arbitraire suivant le nombre de neurones pr\u00e9sents sur la couche cach\u00e9e."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Initialisation des poids: g\u00e9n\u00e9ralement des petites valeurs al\u00e9atoires"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "TODO: quelle diff\u00e9rence entre:\n",
-    "* r\u00e9seau boucl\u00e9\n",
-    "* r\u00e9seau r\u00e9curent"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Notations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\newcommand{\\sigin}{x}$\n",
+    "$\\sigin$: **TODO**\n",
+    "\n",
+    "$\\newcommand{\\pot}{p}$\n",
+    "$\\pot$: *Potentiel (d'activation ?)* du neurone **TODO**\n",
+    "\n",
+    "$\\newcommand{\\wij}{w_{ij}}$\n",
+    "$\\wij$: Poids de la connexion entre le neurone $j$ et le neurone $i$\n",
+    "\n",
+    "$\\newcommand{\\activthres}{\\theta}$\n",
+    "$\\activthres$: *Seuil d'activation* du neurone\n",
+    "\n",
+    "$\\newcommand{\\activfunc}{f}$\n",
+    "$\\activfunc$: *Fonction d'activation*\n",
+    "\n",
+    "$\\newcommand{\\errfunc}{E}$\n",
+    "$\\errfunc$: *Fonction objectif* ou *fonction d'erreur*\n",
+    "\n",
+    "$\\newcommand{\\learnrate}{\\epsilon}$\n",
+    "$\\learnrate$: *Pas d'apprentissage* ou *Taux d'apprentissage*\n",
+    "\n",
+    "$\\newcommand{\\learnit}{n}$\n",
+    "$\\learnit$: **TODO**\n",
+    "\n",
+    "$\\newcommand{\\it}{t}$\n",
+    "$\\it$: **TODO**\n",
+    "\n",
+    "$\\newcommand{\\sigincur}{x_i}$\n",
+    "$\\sigincur$: **TODO**\n",
+    "\n",
+    "$\\newcommand{\\sigout}{y}$\n",
+    "$\\sigout$: **TODO**\n",
+    "\n",
+    "$\\newcommand{\\sigoutcur}{y_i}$\n",
+    "$\\sigoutcur$: **TODO**\n",
+    "\n",
+    "$\\newcommand{\\sigoutprev}{y_j}$\n",
+    "$\\sigoutprev$: **TODO**\n",
+    "\n",
+    "$\\newcommand{\\sigoutdes}{d_i}$\n",
+    "$\\sigoutdes$: **TODO**\n",
+    "\n",
+    "$\\newcommand{\\weights}{\\boldsymbol{W}}$\n",
+    "$\\weights$: **TODO**\n",
+    "\n",
+    "$\\newcommand{\\weight}{w}$\n",
+    "$\\weight$: **TODO**\n",
+    "\n",
+    "$\\newcommand{\\errsig}{\\Delta}$\n",
+    "$\\errsig$: **TODO**"
    ]
   },
   {
@@ -145,6 +153,36 @@
     "    \\weight_{n1} & \\cdots & \\weight_{nm}\n",
     "\\end{pmatrix}\n",
     "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Divers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Le PMC peut approximer n'importe quelle fonction **continue** avec une pr\u00e9cision arbitraire suivant le nombre de neurones pr\u00e9sents sur la couche cach\u00e9e."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Initialisation des poids: g\u00e9n\u00e9ralement des petites valeurs al\u00e9atoires"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO: quelle diff\u00e9rence entre:\n",
+    "* r\u00e9seau boucl\u00e9\n",
+    "* r\u00e9seau r\u00e9curent"
    ]
   },
   {
@@ -803,6 +841,72 @@
    "source": [
     "evaluate_network(weights, input_signal)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Notes de la documentation sklearn"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- *features* : les donn\u00e9es d'entr\u00e9e du r\u00e9seau (i.e. les entr\u00e9es de la 1ere couche du r\u00e9seau)\n",
+    "  - \"nombre de features\" =  taille du vecteur d'entr\u00e9es\n",
+    "- *loss function*: fonction objectif (ou fonction d'erreur)\n",
+    "- *fitting*: processus d'apprentissage (training)\n",
+    "- *sample*: exemple"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Les biais sont stock\u00e9s dans une liste de vecteurs plut\u00f4t qu'une liste de scalaires... pourquoi ???"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Avantages des PMC:\n",
+    "- capables d'apprendre des mod\u00e8les non lin\u00e9aires\n",
+    "- capables d'apprendre des mod\u00e8les en temps r\u00e9el (apprentissage *on-line*)\n",
+    "\n",
+    "Inconvenients des PMC:\n",
+    "- les PMC avec une ou plusieurs couches cach\u00e9es ont une fonction objectif non-convexe avec des minimas locaux. Par cons\u00e9quent, le r\u00e9sultat du processus d'apprentissage peut varier d'une execution \u00e0 l'autre suivant la valeur des poids initiaux et l'obtention d'un r\u00e9seau optimal n'est pas garanti\n",
+    "- pour obtenir un r\u00e9sultat satisfaisant, il est souvant n\u00e9cessaire de r\u00e9gler (plus ou moins empiriquement) de nombreux meta-param\u00e8tres (nombres de couches cach\u00e9es, nombre de neurones sur les couches cach\u00e9es, nombres d'it\u00e9rations, ...)\n",
+    "- une  mauvaise normalisation des donn\u00e9es d'entr\u00e9e a un impact tr\u00e8s n\u00e9gatif sur la qualit\u00e9 du r\u00e9sultat (\"mal conditionn\u00e9\" ???)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Cross-Entropy Loss Function*: ...\n",
+    "\n",
+    "*Softmax*: ...\n",
+    "\n",
+    "*Multi-label classification*: ... mod\u00e8le de classifieur qui permet a un exemple d'appartenir \u00e0 plusieurs classes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Notes du livre de Jean-Philippe Rennard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
