--- a/python_pandas_en.ipynb
+++ b/python_pandas_en.ipynb
@@ -287,6 +287,8 @@
     "\n",
     "The recommended alternative to work with 3-dimensional data is the [xarray](http://xarray.pydata.org/en/stable/) python library.\n",
     "\n",
+    "An other workaround: one can simply use a [MultiIndex](https://pandas.pydata.org/pandas-docs/stable/generated/pandas.MultiIndex.html) `DataFrame` for easily working with higher dimensional data.\n",
+    "\n",
     "See http://pandas.pydata.org/pandas-docs/stable/dsintro.html#deprecate-panel."
    ]
   },
@@ -306,6 +308,8 @@
     "Pandas now focuses on 1D (`Series`) and 2D (`DataFrame`) data structures.\n",
     "\n",
     "The recommended alternative to work with n-dimensional data is the [xarray](http://xarray.pydata.org/en/stable/) python library.\n",
+    "\n",
+    "An other workaround: one can simply use a [MultiIndex](https://pandas.pydata.org/pandas-docs/stable/generated/pandas.MultiIndex.html) `DataFrame` for easily working with higher dimensional data.\n",
     "\n",
     "See http://pandas.pydata.org/pandas-docs/stable/dsintro.html#panel4d-and-panelnd-deprecated."
    ]
