--- a/maths_euclidean_geometry_en.ipynb
+++ b/maths_euclidean_geometry_en.ipynb
@@ -17,12 +17,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "%pylab notebook\n",
+    "#%pylab notebook\n",
+    "%pylab inline\n",
     "\n",
     "pylab.rcParams['figure.figsize'] = (6, 6)\n",
     "\n",
@@ -110,9 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Define initial points\n",
@@ -244,9 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Define initial points\n",
@@ -321,7 +316,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [],
@@ -386,9 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "@interact(a=(-5., 5., 0.1), b=(-5., 5., 0.1), c=(-5., 5., 0.1))\n",
@@ -403,7 +395,10 @@
     "    x = np.array([-10., 10.])\n",
     "    f = lambda x: a/(-b) * x + c/(-b)\n",
     "    \n",
-    "    plt.plot(x, f(x))\n",
+    "    try:\n",
+    "        plt.plot(x, f(x))\n",
+    "    except ZeroDivisionError:\n",
+    "        print(\"b should not be equal to 0\")\n",
     "\n",
     "    plt.grid()"
    ]
@@ -442,9 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Setup the plot\n",
@@ -547,9 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def angle_point_to_equation(angle_degree, p):\n",
@@ -611,7 +602,7 @@
     "\n",
     "* $\\mathbf{a}_{x,y,z}$: the 3D position of a point A that is to be projected.\n",
     "* $\\mathbf{c}_{x,y,z}$: the 3D position of a point C representing the camera.\n",
-    "* $\\mathbf{\\theta}_{x,y,z}$: the orientation of the camera (represented by Tait\u2013Bryan angles).\n",
+    "* $\\mathbf{\\theta}_{x,y,z}$: the orientation of the camera (represented by Tait–Bryan angles).\n",
     "* $\\mathbf{e}_{x,y,z}$: the viewer's position **relative to the display surface which goes through point C** representing the camera (i.e. $\\mathbf{e}$ doesn't change with the position of the camera C and typically $\\mathbf{e} = (0, 0, -1)^T$ for a view angle of $2*\\cos^{-1}(1/\\sqrt{2})$ radians when the projection is made on the x/y plane).\n",
     "\n",
     "Which results in:\n",
@@ -711,7 +702,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [],
@@ -788,82 +778,82 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Define initial points to project\n",
-    "A = np.array([[-1., 0., 1.],\n",
-    "              [ 1., 0., 1.],\n",
-    "              [-1., 0., 2.],\n",
-    "              [ 1., 0., 2.],\n",
-    "              [-1., 0., 5.],\n",
-    "              [ 1., 0., 5.],\n",
-    "              [-1., 0., 15.],\n",
-    "              [ 1., 0., 15.]])\n",
+    "@interact(theta_x=(-90., 90., 1.), theta_y=(-90., 90., 1.), theta_z=(-90., 90., 1.))\n",
+    "def projection(theta_x, theta_y, theta_z):\n",
+    "    \n",
+    "    # Define initial points to project\n",
+    "    A = np.array([[-1., 0., 1.],\n",
+    "                  [ 1., 0., 1.],\n",
+    "                  [-1., 0., 2.],\n",
+    "                  [ 1., 0., 2.],\n",
+    "                  [-1., 0., 5.],\n",
+    "                  [ 1., 0., 5.],\n",
+    "                  [-1., 0., 15.],\n",
+    "                  [ 1., 0., 15.]])\n",
     "\n",
-    "# Define camera's position\n",
-    "c = np.array([0., -2., 0.])\n",
-    "C = np.tile(c, (A.shape[0], 1))\n",
+    "    # Define camera's position\n",
+    "    c = np.array([0., -2., 0.])\n",
+    "    C = np.tile(c, (A.shape[0], 1))\n",
     "\n",
-    "# Define viewer's position\n",
-    "e = np.array([0., 0., -1.])\n",
+    "    # Define viewer's position\n",
+    "    e = np.array([0., 0., -1.])\n",
     "\n",
-    "# Define the orientation of the camera\n",
-    "theta = np.array([np.radians(0),\n",
-    "                  np.radians(0),\n",
-    "                  np.radians(0)])\n",
+    "    # Define the orientation of the camera\n",
+    "    theta = np.radians(np.array([theta_x, theta_y, theta_z]))\n",
     "\n",
-    "theta_x, theta_y, theta_z = theta[0], theta[1], theta[2]\n",
+    "    theta_x, theta_y, theta_z = theta[0], theta[1], theta[2]\n",
     "\n",
-    "# Define the rotation matrices\n",
-    "Rx = np.array([[1., 0.,               0.],\n",
-    "               [0., np.cos(theta_x),  np.sin(theta_x)],\n",
-    "               [0., -np.sin(theta_x), np.cos(theta_x)]])\n",
+    "    # Define the rotation matrices\n",
+    "    Rx = np.array([[1., 0.,               0.],\n",
+    "                   [0., np.cos(theta_x),  np.sin(theta_x)],\n",
+    "                   [0., -np.sin(theta_x), np.cos(theta_x)]])\n",
     "\n",
-    "Ry = np.array([[np.cos(theta_y),  0., -np.sin(theta_y)],\n",
-    "               [0.,               1., 0.           ],\n",
-    "               [np.sin(theta_y),  0., np.cos(theta_y)]])\n",
+    "    Ry = np.array([[np.cos(theta_y),  0., -np.sin(theta_y)],\n",
+    "                   [0.,               1., 0.           ],\n",
+    "                   [np.sin(theta_y),  0., np.cos(theta_y)]])\n",
     "\n",
-    "Rz = np.array([[np.cos(theta_z),  np.sin(theta_z), 0.],\n",
-    "               [-np.sin(theta_z), np.cos(theta_z), 0.],\n",
-    "               [0.,               0.,              1.]])\n",
+    "    Rz = np.array([[np.cos(theta_z),  np.sin(theta_z), 0.],\n",
+    "                   [-np.sin(theta_z), np.cos(theta_z), 0.],\n",
+    "                   [0.,               0.,              1.]])\n",
     "\n",
-    "d = np.dot(Rx, Ry)\n",
-    "d = np.dot(d, Rz)\n",
-    "d = np.dot(d, (A-C).T)\n",
+    "    d = np.dot(Rx, Ry)\n",
+    "    d = np.dot(d, Rz)\n",
+    "    d = np.dot(d, (A-C).T)\n",
     "\n",
-    "## TODO: which version is correct ? The one above or the one below ?\n",
-    "#d = a - c\n",
-    "#d = np.dot(Rz, d)\n",
-    "#d = np.dot(Ry, d)\n",
-    "#d = np.dot(Rx, d)\n",
+    "    ## TODO: which version is correct ? The one above or the one below ?\n",
+    "    #d = a - c\n",
+    "    #d = np.dot(Rz, d)\n",
+    "    #d = np.dot(Ry, d)\n",
+    "    #d = np.dot(Rx, d)\n",
     "\n",
-    "print(\"d:\", d)\n",
+    "    print(\"d:\", d)\n",
     "\n",
-    "b = np.array([e[2]/d[2] * d[0] - e[0],\n",
-    "              e[2]/d[2] * d[1] - e[1]])\n",
+    "    b = np.array([e[2]/d[2] * d[0] - e[0],\n",
+    "                  e[2]/d[2] * d[1] - e[1]])\n",
     "\n",
-    "print(\"b:\", b)\n",
+    "    print(\"b:\", b)\n",
     "\n",
-    "# Alternative to compute b\n",
-    "Rf = np.array([[1., 0., -e[0]/e[2], 0.],\n",
-    "               [0., 1., -e[1]/e[2], 0.],\n",
-    "               [0., 0., 1.,         0.],\n",
-    "               [0., 0., 1./e[2],    0.]])\n",
+    "    # Alternative to compute b\n",
+    "    Rf = np.array([[1., 0., -e[0]/e[2], 0.],\n",
+    "                   [0., 1., -e[1]/e[2], 0.],\n",
+    "                   [0., 0., 1.,         0.],\n",
+    "                   [0., 0., 1./e[2],    0.]])\n",
     "\n",
-    "# Add a line of ones\n",
-    "d = np.vstack([d, np.ones(d.shape[1])])\n",
+    "    # Add a line of ones\n",
+    "    d = np.vstack([d, np.ones(d.shape[1])])\n",
     "\n",
-    "f = np.dot(Rf, d)\n",
+    "    f = np.dot(Rf, d)\n",
     "\n",
-    "b = np.array([f[0]/f[3],\n",
-    "              f[1]/f[3]])\n",
+    "    b = np.array([f[0]/f[3],\n",
+    "                  f[1]/f[3]])\n",
     "\n",
-    "print(\"b:\", b)\n",
+    "    print(\"b:\", b)\n",
     "\n",
-    "plot2d(np.array([b, b]), \"ok\")"
+    "    plot2d(b.T, \"ok\")\n",
+    "    plot2d(b.T, \"-k\")"
    ]
   },
   {
@@ -885,9 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plt.axis('equal')\n",
@@ -929,7 +917,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
