--- a/ai_multilayer_perceptron_fr.ipynb
+++ b/ai_multilayer_perceptron_fr.ipynb
@@ -40,17 +40,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\newcommand{\\sigin}{x}$\n",
-    "$\\sigin$: **TODO**\n",
+    "$\\newcommand{\\cur}{i}$\n",
+    "$\\cur$: couche courante\n",
+    "\n",
+    "$\\newcommand{\\prev}{j}$\n",
+    "$\\prev$: couche immédiatement en amont (i.e. vers la couche d'entrée du réseau) de la courche courrante\n",
+    "\n",
+    "$\\newcommand{\\next}{k}$\n",
+    "$\\next$: couche immédiatement en aval (i.e. vers la couche de sortie du réseau) de la courche courrante\n",
     "\n",
     "$\\newcommand{\\pot}{x}$\n",
-    "$\\pot$: *Potentiel (d'activation ?)* du neurone **TODO**\n",
+    "$\\pot_i$: *Potentiel d'activation* du neurone $i$\n",
     "\n",
     "$\\newcommand{\\wij}{w_{ij}}$\n",
     "$\\wij$: Poids de la connexion entre le neurone $j$ et le neurone $i$\n",
     "\n",
     "$\\newcommand{\\activthres}{\\theta}$\n",
-    "$\\activthres$: *Seuil d'activation* du neurone\n",
+    "$\\activthres_i$: *Seuil d'activation* du neurone $i$\n",
     "\n",
     "$\\newcommand{\\activfunc}{f}$\n",
     "$\\activfunc_i$: *Fonction d'activation* du neurone $i$\n",
@@ -62,13 +68,7 @@
     "$\\learnrate$: *Pas d'apprentissage* ou *Taux d'apprentissage*\n",
     "\n",
     "$\\newcommand{\\learnit}{n}$\n",
-    "$\\learnit$: **TODO**\n",
-    "\n",
-    "$\\newcommand{\\it}{t}$\n",
-    "$\\it$: **TODO**\n",
-    "\n",
-    "$\\newcommand{\\sigincur}{x_i}$\n",
-    "$\\sigincur$: **TODO**\n",
+    "$\\learnit$: numéro d'itération (ou cycle ou époque) du processus d'apprentissage\n",
     "\n",
     "$\\newcommand{\\sigout}{y}$\n",
     "$\\sigout$: **TODO**\n",
@@ -80,7 +80,7 @@
     "$\\sigoutprev$: **TODO**\n",
     "\n",
     "$\\newcommand{\\sigoutdes}{d}$\n",
-    "$\\sigoutdescur$: **TODO**\n",
+    "$\\sigoutdes$: **TODO**\n",
     "\n",
     "$\\newcommand{\\sigoutdescur}{d_i}$\n",
     "$\\sigoutdescur$: **TODO**\n",
@@ -141,11 +141,11 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\sigincur = \\sum_j \\wij \\sigoutprev\n",
+    "\\pot_{\\cur} = \\sum_j \\wij \\sigoutprev\n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\sigoutcur = \\activfunc(\\sigincur)\n",
+    "\\sigoutcur = \\activfunc(\\pot_{\\cur})\n",
     "$$\n",
     "\n",
     "$$\n",
@@ -433,7 +433,7 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\errsig_i = \\activfunc'(\\sigincur)[\\sigoutcur - \\sigoutdescur]\n",
+    "\\errsig_i = \\activfunc'(\\pot_{\\cur})[\\sigoutcur - \\sigoutdescur]\n",
     "$$"
    ]
   },
@@ -449,7 +449,7 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\errsig_i = \\activfunc'(\\sigincur) \\sum_k \\weight_{ki} \\errsig_k\n",
+    "\\errsig_i = \\activfunc'(\\pot_{\\cur}) \\sum_k \\weight_{ki} \\errsig_k\n",
     "$$"
    ]
   },
@@ -601,6 +601,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "rappel:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{align}\n",
+    "\\errfunc  &= \\frac12 \\left( \\sigout_o - \\sigoutdes_o \\right)^2 \\tag{1} \\\\\n",
+    "\\sigout_o &= f(\\pot_o)  \\tag{2} \\\\\n",
+    "\\pot_o    &= \\sigout_2 \\weight_4 + \\sigout_3 \\weight_5  \\tag{3} \\\\\n",
+    "\\end{align}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "c'est à dire:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\errfunc = \\frac12 \\left( f(\\sigout_2 \\weight_4 + \\sigout_3 \\weight_5) - \\sigoutdes_o \\right)^2\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "donc, en appliquant les règles de derivation de fonctions composées, on a:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "$$\n",
     "\\frac{\\partial \\errfunc}{\\partial \\weight_4} =\n",
     "\\frac{\\partial \\pot_o}{\\partial \\weight_4}\n",
@@ -615,7 +658,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "avec:"
+    "de (1), (2) et (3) on déduit:"
    ]
   },
   {
@@ -627,6 +670,23 @@
     "\\frac{\\partial \\pot_o}{\\partial \\weight_4}   &= \\sigout_2 \\\\\n",
     "\\frac{\\partial \\sigout_o}{\\partial \\pot_o}   &= \\activfunc'(\\pot_o) \\\\\n",
     "\\frac{\\partial \\errfunc}{\\partial \\sigout_o} &= \\sigout_o - \\sigoutdes_o \\\\\n",
+    "\\end{align}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "le signal d'erreur s'écrit donc:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{align}\n",
     "\\errsig_o &=\n",
     "\\frac{\\partial \\sigout_o}{\\partial \\pot_o}\n",
     "\\frac{\\partial \\errfunc}{\\partial \\sigout_o} \\\\\n",
@@ -896,7 +956,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -959,7 +1018,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -1009,9 +1067,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "x = np.linspace(-5, 5, 300)\n",
@@ -1054,9 +1110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "x = np.linspace(-5, 5, 300)\n",
@@ -1208,9 +1262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "weights = init_weights(num_input_cells=2, num_output_cells=2, num_cell_per_hidden_layer=3, num_hidden_layers=1)\n",
@@ -1222,9 +1274,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "input_signal = np.array([.1, .2])\n",
@@ -1235,7 +1285,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -1308,6 +1357,25 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Shallow et Deep learning: à lire"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- https://www.miximum.fr/blog/introduction-au-deep-learning-2/\n",
+    "- https://sciencetonnante.wordpress.com/2016/04/08/le-deep-learning/\n",
+    "- https://www.technologies-ebusiness.com/enjeux-et-tendances/le-deep-learning-pas-a-pas\n",
+    "- http://scholar.google.fr/scholar_url?url=https://arxiv.org/pdf/1404.7828&hl=fr&sa=X&scisig=AAGBfm07Y2UDlPpbninerh4gxHUj2SJfDQ&nossl=1&oi=scholarr&sqi=2&ved=0ahUKEwjfxMu7jKnUAhUoCsAKHR_RDlkQgAMIKygAMAA"
+   ]
   }
  ],
  "metadata": {
